added more content for the home page along with styles

--- a/client/src/pages/homPage.css
+++ b/client/src/pages/homPage.css
@@ -5,3 +5,8 @@
     margin-left: 1rem!important;
     margin-right: 1rem!important;
 }
+
+.socialItem {
+    background: none!important;
+    border: none!important;
+}
