added pagnation to the portfolio page. Along with adding logic to make the pagnation work

--- a/client/src/pages/projectPage.css
+++ b/client/src/pages/projectPage.css
@@ -1,6 +1,6 @@
 .projectsRow {
-    margin-right: 5vh!important;
-    margin-left: 5vh!important;
+    /* margin-right: 1vh!important;
+    margin-left: 1vh!important; */
     margin-top: 2rem;
 }
 
