--- a/client/src/components/dottedBackground.css
+++ b/client/src/components/dottedBackground.css
@@ -12,6 +12,7 @@
     top: 0;
     left: 0;
     z-index: -1;
+    background: #14213d;
 }
 
 .dotOne {
@@ -69,7 +70,7 @@
     left: 75%;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 768px) {
     .dot {
         height: 10vh;
         width: 10vh;
