--- a/client/src/components/employMePlease.css
+++ b/client/src/components/employMePlease.css
@@ -5,3 +5,9 @@
 .fa-file-word {
     color: blue;
 }
+
+@media only screen and (min-width: 2560px) {
+    .fa-file-pdf, .fa-file-word, .wordResume, .pdfResume   {
+        font-size: 2.5rem!important;
+    }
+}
