--- a/client/src/components/mehNavBar.css
+++ b/client/src/components/mehNavBar.css
@@ -15,6 +15,33 @@ nav {
     background-color: #fca311!important;
 }
 
-.navbar-brand {
-    /* font-size: 3rem!important; */
+@media only screen and (min-width: 768px) {
+    .nav-link {
+        font-size: 1.5rem!important;
+    }
+
+    .navbar-brand {
+        font-size: 2.5rem!important;
+    }
+    
+}
+
+@media only screen and (min-width: 1440px) {
+    .nav-link {
+        font-size: 2rem!important;
+    }
+
+    .navbar-brand {
+        font-size: 3rem!important;
+    }
+}
+
+@media only screen and (min-width: 2560px) {
+    .nav-link {
+        font-size: 3.5rem!important;
+    }
+
+    .navbar-brand {
+        font-size: 4rem!important;
+    }
 }
