--- a/client/src/pages/homePage.css
+++ b/client/src/pages/homePage.css
@@ -10,3 +10,19 @@
     background: none!important;
     border: none!important;
 }
+
+
+
+@media only screen and (min-width: 2560px) {
+    .section  h3, .pageNav h3{
+        font-size: 2.5rem;
+    }
+
+    .section h2 {
+        font-size: 3rem;
+    }
+
+    .section p, .section li {
+        font-size: 2rem;
+    }
+}
