--- a/client/src/components/radProjectCard.css
+++ b/client/src/components/radProjectCard.css
@@ -23,3 +23,20 @@
     bottom: 5px;
     left: 5px
 }
+
+@media only screen and (min-width: 2560px) {
+    .card-title.h5{
+        font-size: 2rem!important;
+    }
+    .card-subtitle.h6{
+        font-size: 1.5rem!important;
+    }
+    .card-text {
+        font-size: 1.5rem;
+    }
+    .leftButton, .rightButton {
+        height: 4vh;
+        width: 4vh;
+        font-size: 2rem!important;
+    }
+}
