--- a/client/src/components/radProjectCard.css
+++ b/client/src/components/radProjectCard.css
@@ -24,6 +24,9 @@
     left: 5px
 }
 
+@media only screen and (min-width: 1440px) {
+    
+}
 @media only screen and (min-width: 2560px) {
     .card-title.h5{
         font-size: 2rem!important;
