--- a/client/src/components/mehNavBar.css
+++ b/client/src/components/mehNavBar.css
@@ -1,10 +1,13 @@
 nav {
     font-weight: bolder;
-    /* font-size: 2rem; */
 }
 
 .nav-link {
     color: #000000!important
+}
+
+.nav-link:hover {
+    transform: translateY(-10px);
 }
 
 .nav-link.active {
